<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#304769"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".RegistrationActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="Registration"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"

            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/man"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="3dp" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="Birthday"
            android:gravity="right"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="Mobile No."
            android:inputType="number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etIDNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="ID Number"
            android:inputType="number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="Address"
            android:inputType="textPostalAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etsalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="Salary"
            android:inputType="numberDecimal"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etNextOfKinFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="Next of Kin Name"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etNextOfKinMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:hint="Next of Kin Mobile"
            android:inputType="text"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#f05924"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/already_having_account"
            android:textColor="#ccc" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="@string/log_in"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>